# hasdata-data-collection

./: .env.example  .gitignore  README.md  models.py  pyproject.toml
migrations/: add_missing_columns_zillow_properties.sql  add_reso_inclusions_column_zillow_properties.sql  backfill_missing_columns_zillow_properties.sql  remove_sparse_columns_zillow_properties.sql
src/: scrape_glassdoor_jobs.py  scrape_glassdoor_listings.py  scrape_zillow.py  scrape_zillow_listings.py  scrape_zillow_properties.py
src/scraper/: cli.py  config.py  db.py  endpoints.py  generic_scraper.py  hasdata.py  models.py  pipeline.py  scraper.py
tests/: test_backup_dir_creation.py  test_db_zillow_listings.py  test_generic_scraper.py  test_zillow_property_scraper.py
