[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hasdata-scraper"
version = "0.1.0"
description = "Scrape public data via HasData, persist to Postgres, backup JSON locally"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",          # Async HTTP client for HasData API
    "psycopg[binary]>=3.1", # Postgres driver (psycopg3)
    "pydantic-settings>=2", # Config via .env
    "typer>=0.12",          # CLI
    "rich>=13",             # Pretty terminal output
    "tenacity>=8",          # Retry logic
]

[project.scripts]
scraper = "scraper.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]